--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,16 @@ pytest = {version = "^6.2.3", optional = true}
 hypothesis = {version = "^6.10.1", optional = true}
 ipython = {version = "^7.23.0", optional = true}
 typing-extensions = "^3.7.4"
+Sphinx = {version = "^3.5.4", optional = true}
+numpydoc = {version = "^1.1.0", optional = true}
+pandoc = {version = "^1.0.2", optional = true}
+insipid-sphinx-theme = {version = "^0.2.4", optional = true}
+nbsphinx = {version = "^0.8.4", optional = true}
+sphinx-autodoc-typehints = {version = "^1.12.0", optional = true}
+coiled = {version = "^0.0.38", optional = true}
+distributed = {version = "^2021.4.1", optional = true}
+pystac-client = {version = "^0.1.1", optional = true}
+stackstac = {version = "^0.1.1", optional = true}
 
 [tool.poetry.dev-dependencies]
 jupyterlab = "^3.0.14"
@@ -23,6 +33,7 @@ ipython = "^7.23.0"
 black = "^21.4b2"
 flake8 = "^3.9.1"
 shed = "^0.3.4"
+sphinx-autobuild = "^2021.3.14"
 
 [tool.poetry.extras]
 test = [
@@ -30,6 +41,21 @@ test = [
   "hypothesis",
   "ipython",
 ]
+docs = [
+  "Sphinx",
+  "numpydoc",
+  "sphinx-autodoc-typehints",
+  "pandoc",
+  "nbsphinx",
+  "insipid-sphinx-theme",
+  "ipython",
+  "jupyter-sphinx",
+  "distributed",
+  "coiled",
+  "pystac-client",
+  "stackstac",
+]
+
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
