--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Render xarray timestacks into GIFs"
 authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7.1"
+python = "^3.8"
 dask = {extras = ["delayed"], version = "^2021.4.1"}
 numpy = "^1.20.2"
 Pillow = "^8.2.0"
@@ -14,26 +14,25 @@ xarray = "^0.17.0"
 pytest = {version = "^6.2.3", optional = true}
 hypothesis = {version = "^6.10.1", optional = true}
 ipython = {version = "^7.23.0", optional = true}
-typing-extensions = "^3.7.4"
 Sphinx = {version = "^3.5.4", optional = true}
 numpydoc = {version = "^1.1.0", optional = true}
 pandoc = {version = "^1.0.2", optional = true}
-insipid-sphinx-theme = {version = "^0.2.4", optional = true}
 nbsphinx = {version = "^0.8.4", optional = true}
 sphinx-autodoc-typehints = {version = "^1.12.0", optional = true}
 coiled = {version = "^0.0.38", optional = true}
 distributed = {version = "^2021.4.1", optional = true}
 pystac-client = {version = "^0.1.1", optional = true}
+furo = {version = "^2021.4.11-beta.34", optional = true}
 stackstac = {version = "^0.1.1", optional = true}
 
 [tool.poetry.dev-dependencies]
 jupyterlab = "^3.0.14"
-distributed = "^2021.4.1"
 ipython = "^7.23.0"
 black = "^21.4b2"
 flake8 = "^3.9.1"
 shed = "^0.3.4"
 sphinx-autobuild = "^2021.3.14"
+Bottleneck = "^1.3.2"
 
 [tool.poetry.extras]
 test = [
@@ -47,7 +46,7 @@ docs = [
   "sphinx-autodoc-typehints",
   "pandoc",
   "nbsphinx",
-  "insipid-sphinx-theme",
+  "furo",
   "ipython",
   "jupyter-sphinx",
   "distributed",
