--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "geogif"
-version = "0.1.0"
+version = "0.1.1"
 description = "Render xarray timestacks into GIFs"
 authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
 readme = "README.md"
@@ -13,7 +13,7 @@ dask = {extras = ["delayed"], version = "^2021.4.1"}
 numpy = "^1.20.2"
 Pillow = "^8.2.0"
 matplotlib = "^3.4.1"
-xarray = "^0.17.0"
+xarray = ">=0.18,<1"
 pytest = {version = "^6.2.3", optional = true}
 hypothesis = {version = "^6.10.1", optional = true}
 ipython = {version = "^7.23.0", optional = true}
@@ -22,11 +22,11 @@ numpydoc = {version = "^1.1.0", optional = true}
 pandoc = {version = "^1.0.2", optional = true}
 nbsphinx = {version = "^0.8.4", optional = true}
 sphinx-autodoc-typehints = {version = "^1.12.0", optional = true}
-coiled = {version = "^0.0.38", optional = true}
+coiled = {version = "^0", optional = true}
 distributed = {version = "^2021.4.1", optional = true}
-pystac-client = {version = "^0.1.1", optional = true}
+pystac-client = {version = "^0", optional = true}
 furo = {version = "^2021.4.11-beta.34", optional = true}
-stackstac = {version = "^0.1.1", optional = true}
+stackstac = {version = "^0", optional = true}
 
 [tool.poetry.dev-dependencies]
 jupyterlab = "^3.0.14"
