--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dask = {extras = ["delayed"], version = ">= 2021.4.1, < 2023"}
 numpy = "^1.20.2"
 Pillow = "^9.0.1"
 matplotlib = "^3.4.1"
-xarray = ">=0.18,<1"
+xarray = ">=0.18"
 pytest = {version = "^6.2.3", optional = true}
 hypothesis = {version = "^6.10.1", optional = true}
 ipython = {version = "^7.23.0", optional = true}
