--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,21 +14,8 @@ numpy = "^1.20.2"
 Pillow = "^9.0.1"
 matplotlib = "^3.4.1"
 xarray = ">=0.18"
-pytest = {version = "^6.2.3", optional = true}
-hypothesis = {version = "^6.10.1", optional = true}
-ipython = {version = "^7.23.0", optional = true}
-Sphinx = {version = "^3.5.4", optional = true}
-numpydoc = {version = "^1.1.0", optional = true}
-pandoc = {version = "^1.0.2", optional = true}
-nbsphinx = {version = "^0.8.4", optional = true}
-sphinx-autodoc-typehints = {version = "^1.12.0", optional = true}
-coiled = {version = "^0", optional = true}
-distributed = {version = ">= 2021.4.1, < 2023", optional = true}
-pystac-client = {version = "^0", optional = true}
-furo = {version = "^2021.4.11-beta.34", optional = true}
-stackstac = {version = "^0", optional = true}
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 jupyterlab = "^3.0.14"
 ipython = "^7.23.0"
 black = "^21.4b2"
@@ -39,26 +26,23 @@ Bottleneck = "^1.3.2"
 keyring = "^23.0.1"
 twine = "^3.4.1"
 
-[tool.poetry.extras]
-test = [
-  "pytest",
-  "hypothesis",
-  "ipython",
-]
-docs = [
-  "Sphinx",
-  "numpydoc",
-  "sphinx-autodoc-typehints",
-  "pandoc",
-  "nbsphinx",
-  "furo",
-  "ipython",
-  "jupyter-sphinx",
-  "distributed",
-  "coiled",
-  "pystac-client",
-  "stackstac",
-]
+[tool.poetry.group.test.dependencies]
+pytest = "^6.2.3"
+hypothesis = "^6.10.1"
+ipython = "^7.23.0"
+
+
+[tool.poetry.group.docs.dependencies]
+Sphinx = "^3.5.4"
+numpydoc = "^1.1.0"
+pandoc = "^1.0.2"
+nbsphinx = "^0.8.4"
+sphinx-autodoc-typehints = "^1.12.0"
+coiled = "^0"
+distributed = ">= 2021.4.1, < 2023"
+pystac-client = "^0"
+furo = "^2021.4.11-beta.34"
+stackstac = "^0"
 
 
 [build-system]
