--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,11 +3,19 @@ version: 2
 sphinx:
   configuration: docs/conf.py
 
-# https://github.com/readthedocs/readthedocs.org/issues/4912#issuecomment-664002569
-python:
-  version: 3.8
-  install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
+# https://docs.readthedocs.io/en/stable/build-customization.html#install-dependencies-with-poetry
+build:
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.8"
+  jobs:
+    post_create_environment:
+      # Install poetry
+      # https://python-poetry.org/docs/#installing-manually
+      - pip install poetry
+      # Tell poetry to not use a virtual environment
+      - poetry config virtualenvs.create false
+    post_install:
+      # Install dependencies with 'docs' dependency group
+      # https://python-poetry.org/docs/managing-dependencies/#dependency-groups
+      - poetry install --only main,docs
