--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ sphinx-autobuild = "^2021.3.14"
 Bottleneck = "^1.3.2"
 keyring = "^23.0.1"
 twine = "^3.4.1"
+netcdf4 = "^1.6.5"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^6.2.3"
