--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,20 +11,21 @@ homepage = "https://geogif.readthedocs.io/en/latest/index.html"
 python = "^3.8"
 dask = {extras = ["delayed"], version = ">= 2021.4.1"}
 numpy = "^1.20.2"
-Pillow = "^10"
+Pillow = "^10.1"
 matplotlib = "^3.4.1"
 xarray = ">=0.18"
 
 [tool.poetry.group.dev.dependencies]
 jupyterlab = "^3.0.14"
 ipython = "^7.23.0"
-black = "^21.4b2"
+black = "^24.4.2"
 flake8 = "^3.9.1"
 shed = "^0.3.4"
 sphinx-autobuild = "^2021.3.14"
 Bottleneck = "^1.3.2"
 keyring = "^23.0.1"
 twine = "^3.4.1"
+netcdf4 = "^1.6.5"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^6.2.3"
